--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4"
